[package]
name = "batchbench-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "batchbench_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
